--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Workout Tracker</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Tab names -->
+    <string name="history">History</string>
+    <string name="workouts">Workouts</string>
+    <string name="exercises">Exercises</string>
 </resources>
