--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="history">History</string>
     <string name="workouts">Workouts</string>
     <string name="exercises">Exercises</string>
+
+    <!-- Error messages -->
+    <string name="unexpected_error">Unexpected Error</string>
 </resources>
